--- a/Module2/package.json
+++ b/Module2/package.json
@@ -26,7 +26,7 @@
         "webpack-merge": "^5.8.0"
     },
     "scripts": {
-        "test": "",
+        "test": "lint-staged",
         "start-prod": "webpack serve --open --config webpack.prod.js",
         "start-dev": "webpack serve --open --config webpack.dev.js",
         "build-prod": "webpack --config webpack.prod.js",
