--- a/Module2/package.json
+++ b/Module2/package.json
@@ -4,13 +4,19 @@
     "private": true,
     "dependencies": {
         "babel": "^6.23.0",
+        "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.0",
         "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "webpack": "^5.74.0"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "^5.38.1",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.2.5",
+        "babel-preset-es2015": "^6.24.1",
         "eslint": "^8.24.0",
         "eslint-config-fbjs": "^4.0.0",
         "eslint-plugin-babel": "^5.3.1",
