Add checking jsx

--- a/Module2/package.json
+++ b/Module2/package.json
@@ -41,6 +41,7 @@
         "prepare": "cd .. && husky install Module2/.husky"
     },
     "lint-staged": {
-        "*.js": "eslint"
+        "src/*.js": "eslint",
+        "src/*.jsx": "eslint"
     }
 }
