--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     ],
     "rules": {
         "lit-a11y/click-events-have-key-events": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "no-param-reassign": "off",
+        "react/forbid-prop-types": "off"
     }
 }
