Revert "redux commit"
This reverts commit a3a2d76620962f64c3bbeb7b2a5361cc5dcd7558.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,8 +19,6 @@
     ],
     "rules": {
         "lit-a11y/click-events-have-key-events": "off",
-        "no-console": "off",
-        "no-param-reassign": "off",
-        "react/forbid-prop-types": "off"
+        "no-console": "off"
     }
 }
