--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.3",
     "formik": "^2.2.9",
     "jest": "^27.5.1",
+    "next": "^13.1.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
